Additional REST endpoint for bulk creation
