# src/main/kotlin/ustinov/sergey/shortener/Controller.kt
@@ -17,6 +17,7 @@ import ustinov.sergey.shortener.exceptions.WrongUserInputException
 import ustinov.sergey.shortener.model.Reference
 import ustinov.sergey.shortener.service.ReferenceManagerService
 import ustinov.sergey.shortener.service.ValidatorService
+import ustinov.sergey.shortener.service.ValidatorService.Companion.MAX_REFERENCE_COUNT_IN_BATCH
 import javax.servlet.http.HttpServletResponse
 
 @RestController
@@ -53,6 +54,46 @@ class Controller {
         }
     }
 
+    @PostMapping("/bulk",
+        consumes = [ MediaType.TEXT_PLAIN_VALUE ],
+        produces = [ MediaType.APPLICATION_JSON_VALUE ]
+    )
+    fun createBulk(@RequestBody source: String): String {
+        try {
+            val inputData = source.split('\n')
+            val blankData = inputData.filter { it.isBlank() }
+            val invalidData = mutableMapOf<Int, String>()
+
+            if (blankData.isNotEmpty()) {
+                throw WrongUserInputException("Provided list of references has empty strings. Unable to shorten this")
+            }
+            if (inputData.size > MAX_REFERENCE_COUNT_IN_BATCH) {
+                logger.info("Detected bulk of input data with size ${inputData.size}")
+                throw WrongUserInputException("Provided list of references is too big. Max size for the list is $MAX_REFERENCE_COUNT_IN_BATCH. Unable to shorten this")
+            }
+            inputData.forEachIndexed { index, input ->
+                if (!validatorService.validateHttpReference(input)) {
+                    logger.info("Detected input data that didn't pass validation: '$input'")
+                    invalidData[index] = input
+                } else if (!validatorService.isDomainAllowed(input)) {
+                    logger.info("Detected input data of restricted domain: $input")
+                    invalidData[index] = input
+                }
+            }
+            if (invalidData.isNotEmpty()) {
+                throw WrongUserInputException("Provided list of references has invalid links at positions: ${convertToValidationResponse(invalidData)}. Unable to shorten this")
+            }
+            return convertToResponse(
+                referenceManagerService.createNewReferences(inputData)
+            )
+        } catch (e: AbstractSystemException) {
+            throw e
+        } catch (e: Exception) {
+            logger.error("Server exception encountered", e)
+            throw ServerException("Some error occurred")
+        }
+    }
+
     @PostMapping(
         consumes = [ MediaType.TEXT_PLAIN_VALUE ],
         produces = [ MediaType.APPLICATION_JSON_VALUE ]
@@ -60,7 +101,7 @@ class Controller {
     fun create(@RequestBody source: String): String {
         try {
             if (!validatorService.validateHttpReference(source)) {
-                logger.info("Detected input data that didn't pass validation: $source")
+                logger.info("Detected input data that didn't pass validation: '$source'")
                 throw WrongUserInputException("Provided reference has wrong format. Unable to shorten this")
             }
             if (!validatorService.isDomainAllowed(source)) {
@@ -76,6 +117,20 @@ class Controller {
             logger.error("Server exception encountered", e)
             throw ServerException("Some error occurred")
         }
+    }
+
+    private fun convertToValidationResponse(input: Map<Int, String>)
+        = input.keys.map { it + 1 }.toSortedSet().joinToString()
+
+
+    private fun convertToResponse(reference: List<Reference>): String {
+        val preparedLinks = reference.map {
+            "\t\"${cfg.getServerBasePath()}/${it.base62Ref}\""
+        }
+        val referencesJSONArray = preparedLinks.joinToString(
+            separator = ",\n", prefix = "[\n", postfix = "\n]"
+        )
+        return "{\"shortUrl\" : $referencesJSONArray}"
     }
 
     private fun convertToResponse(reference: Reference): String {
